<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.MovieDetail">
    <TextView
        android:id="@+id/bgStreamHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradiant_color_toolbar"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/imageStreamLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        android:text="Movies"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageMenu"
        app:layout_constraintTop_toTopOf="@id/bgStreamHeader"
        app:layout_constraintBottom_toBottomOf="@id/bgStreamHeader"
        />
    <ImageView
        android:id="@+id/imageMenu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/bgStreamHeader"
        app:layout_constraintBottom_toBottomOf="@id/bgStreamHeader"
        />
    <ImageView
        android:id="@+id/imageSearch"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/bgStreamHeader"
        app:layout_constraintEnd_toEndOf="@+id/bgStreamHeader"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bgStreamHeader"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradiant_color_toolbar"
                android:paddingBottom="100dp"
                app:layout_constraintTop_toTopOf="parent">
                <RatingBar
                    android:id="@+id/movieRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:stepSize="1"
                    android:numStars="5"
                    app:layout_constraintStart_toStartOf="@id/movieTime"
                    app:layout_constraintTop_toBottomOf="@id/movieTime" />
                <TextView
                    android:id="@+id/movieTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_3h_7min"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/movieTitle"
                    app:layout_constraintTop_toBottomOf="@id/movieTitle" />
                <TextView
                    android:id="@+id/movieLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/q"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/movieTime"
                    app:layout_constraintTop_toBottomOf="@id/movieTitle" />
                <TextView
                    android:id="@+id/movieDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_30_dec_2015"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/movieLine"
                    app:layout_constraintTop_toBottomOf="@id/movieTitle" />
                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/the_hateful_eight"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/detailsImageCard"
                    app:layout_constraintTop_toTopOf="@id/detailsImageCard" />
                <TextView
                    android:id="@+id/ratingValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="4.5"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/movieRating"
                    app:layout_constraintStart_toEndOf="@id/movieRating" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/detailsImageCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:elevation="20dp"
                    app:cardElevation="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivDetailsImage"
                        android:layout_width="100dp"
                        android:layout_height="160dp"
                        android:src="@drawable/ic_launcher_background"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="@id/detailsImageCard"
                    app:layout_constraintStart_toStartOf="@id/detailsImageCard"
                    app:layout_constraintBottom_toBottomOf="@id/detailsImageCard"
                    app:layout_constraintEnd_toEndOf="@id/detailsImageCard"
                    android:src="@drawable/ic_baseline_play_circle_outline_24"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tvBg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/headerConstraint"
                android:background="@color/white"/>
            <TextView
                android:id="@+id/tvSynopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="@id/tvBg"
                android:text="@string/synopsis"
                android:textColor="@color/blue"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/tv_movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvSynopsis"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:text="@string/some_time_after"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="30dp"
                android:elevation="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toTopOf="@id/tvSynopsis"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/book_now"
                    android:textSize="20sp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/blueLight"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>